# ag_alg

./: .gitignore  CMakeLists.txt  README
libmy/: CMakeLists.txt
libmy/include/: myjson.h  mymatr.h  myvect.h
libmy/src/: myjson.cpp  myqvect.cpp
src/: gaus_eqn_chk_json.cpp  gaus_eqn_gen.cpp  gaus_eqn_gen_json.cpp  matr_rk_gen_json.cpp
stats/: gaus_eqn_ans.txt  gaus_eqn_stat.txt  matr_rk_ans.txt  matr_rk_stat.txt
