cmake_minimum_required (VERSION 2.6)
project(my_alg)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libmy/include)
add_subdirectory (libmy/) 
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
find_package(Jsoncpp REQUIRED)
find_package(GMP REQUIRED)
file(GLOB ALG_SRC
  "src/*.cpp"
  )
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
foreach(infileName ${ALG_SRC}) 
  STRING(REGEX REPLACE ".cpp\$" "" outfileName "${infileName}")
  get_filename_component(outfile ${outfileName} NAME)
  MESSAGE(STATUS "Output file: ${outfile}")
  add_executable(${outfile} ${infileName})
  target_link_libraries(${outfile} my ${JSONCPP_LIBRARIES} ${GMP_LIBRARIES} ${GMPXX_LIBRARIES})
endforeach(infileName)
#add_executable(my_alg ${ALG_SRC}) 
